# regression-analyzer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/epics/01-data-loader/: 2.md  3.md  4.md  epic.md  github-mapping.md
.claude/epics/02-llm-analyzer/: 6.md  7.md  8.md  epic.md  github-mapping.md
.claude/epics/03-stats-engine/: 10.md  11.md  12.md  13.md  epic.md  github-mapping.md
.claude/epics/04-chart-generator/: 15.md  16.md  17.md  epic.md
.claude/epics/05-cli-interface/: 19.md  20.md  epic.md
.claude/epics/06-fastapi-web-api/: 22.md  23.md  24.md  25.md  26.md  epic.md  github-mapping.md
.claude/epics/07-docker-containerization/: 28.md  29.md  30.md  31.md  epic.md  github-mapping.md
.claude/prds/: 01-data-loader.md  02-llm-analyzer.md  03-stats-engine.md  04-chart-generator.md  05-cli-interface.md  06-fastapi-web-api.md  07-docker-containerization.md  08-kubernetes-deployment.md
src/regression_analyzer/: __init__.py  cli.py  pipeline.py
src/regression_analyzer/analyzer/: __init__.py  llm_analyzer.py  models.py  prompts.py
src/regression_analyzer/api/: __init__.py  main.py  models.py  storage.py
src/regression_analyzer/charts/: __init__.py  generator.py  importance_charts.py  minmax_charts.py  regression_charts.py  styles.py
src/regression_analyzer/core/: __init__.py  llm_runner.py
src/regression_analyzer/loader/: __init__.py  data_loader.py  encoding.py  transpose.py
src/regression_analyzer/providers/: __init__.py  anthropic_provider.py  base.py  claude_code.py  google_provider.py  groq_provider.py  openai_provider.py
src/regression_analyzer/stats/: __init__.py  feature_importance.py  minmax.py  models.py  regression.py
tests/: test_api.py  test_cli.py  test_pipeline.py
tests/analyzer/: test_llm_analyzer.py  test_models.py  test_prompts.py
tests/charts/: __init__.py  test_generator.py
tests/loader/: __init__.py  test_data_loader.py  test_encoding.py  test_transpose.py
tests/stats/: __init__.py  test_feature_importance.py  test_minmax.py  test_regression.py  test_stats_engine.py
